--- a/demo/style.css
+++ b/demo/style.css
@@ -83,38 +83,42 @@ li {
 	color: #c3c5c7;
 	box-shadow: 0px 6px 8px -4px rgba(0,0,0,0.9);
 }
-#header > #left {
+#header > #tabs {
 	float:left;
 }
-#header > #left > a {
+#tabs > a {
 	font-weight: 700;
 	display: inline-block;
 	padding:0 1em;
 	padding-bottom:.5em;
 	font-size: .875em;
+	cursor:pointer;
 }
-#header > #left > a.active {
+#tabs > a.active {
 	border-bottom: 4px solid #2b6ed2;
-} 
+}
+#tabs > a:hover {
+	color:#fff;
+}
 
 
 
 
 
 /* MOVIES LIST */
-#movies {
+#list {
 
 }
 
-#movies > ul > li {
+#list > ul > li {
 	margin:10px;
 	width:134px;
 }
-#movies > ul > li > a > img {
+#list > ul > li > a > img {
 	border-radius: 4px;
 	box-shadow: 0px 0px 10px #000;
 }
-#movies > ul > li > a > p {
+#list > ul > li > a > p {
 	height: auto;
 	margin: 6px 0 4px;
 	color: #fff;
@@ -127,6 +131,21 @@ li {
 	font-size: .8em;
 	font-weight: bold;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
