--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ li {
 	float:left;
 }
 
+
+
+
+
 /* LOGIN BOX */
 #login {
 	width:25em;
@@ -59,15 +63,17 @@ li {
 	box-shadow: 1px 1px 1px #ccc;
 }
 #submit {
-	padding:1.5em 2.5em;
-	color:#62706c;
-	display: inline-block;
+	padding:1.5em 2.5em !important;
+	color:#62706c !important;
+	display: inline-block !important;
 	margin-top: 1em;
 	text-transform: uppercase;
-	font-size: .8em;
-	border:1px solid #C8C8C8;
+	font-size: .8em !important;
+	border:1px solid #C8C8C8 !important;
 	border-radius: 10px;
-	background:#f1f1f1;
+	background:#f1f1f1 !important;
+	width:auto !important;
+	cursor: pointer;
 }
 
 
@@ -110,11 +116,12 @@ li {
 	display: flex;
 	flex-wrap:wrap;
 	justify-content:space-between;
-	width:100%;
+	margin:10px;
 }
 #list > ul > li {
-	margin:10px;
-	width:134px;
+	margin:5px;
+	width:8.375em;
+	cursor: pointer;
 }
 #list > ul > li > a > img {
 	border-radius: 4px;
@@ -137,78 +144,8 @@ li {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* CONTROLLER BOX */
-#controller {
-	width:25em;
-	margin:0 auto;
-	margin-top:5em;
-	color:#375267;
-	display: none;
-}
-
-#toolbar {
-	font-size: 2rem;
-	display: block;
-	margin-bottom: 2em;
-}
-#toolbar i {
-	margin:0 .5em;
-}
-
-#arrows {
-	border-radius:100%;
-	width:25rem;
-	height:25rem;
-	border:2px solid #375267; 
-	position: relative;
-}
-#arrows i {
-	font-size: 5em;
-}
-.fa-chevron-left {
-	position:absolute;
-	top:10rem;
-	left:1.5rem;
-}
-.fa-chevron-right {
-	position:absolute;
-	top:10rem;
-	right:1.5rem;
-}
-.fa-chevron-down {
-	position:absolute;
-	top:18.5rem;
-	left:10rem;
-}
-.fa-chevron-up {
-	position:absolute;
-	top:1.5rem;
-	left:10rem;
-}
-.center {
-	display: inline-block;
-	width:5rem;
-	height:5rem;
-	border-radius: 100%;
-	background:#375267;
-	position: absolute;
-	top:10rem;
-	left:10rem;
+@media (max-width: 570px) {
+  #login { width:90%; margin-top:0; font-size: 14px; }
+  #list > ul > li { }
+  #header { font-size: 12px; }
 }
