--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+/*
+# This file is part of "Popcorn Time Remote Controller by Giacomo Cerquone".
+#
+# Copyright(c) 2015 Giacomo Cerquone
+# cerquone96@hotmail.it
+# http://www.giacomocerquone.com
+#
+# This file is released under of the GNU General Public License Version 3.
+*/
 body {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
