--- a/style.css
+++ b/style.css
@@ -97,6 +97,8 @@ li {
 	margin:0;
 	box-shadow: 0px 6px 8px -4px rgba(0,0,0,0.9);
 }
+
+/* Left  */
 #header > #tabs {
 	float:left;
 	color: #c3c5c7;
@@ -116,6 +118,7 @@ li {
 	color:#fff;
 }
 
+/* Right  */
 #header > #right {
 	float:right;
 	color:#909498;
@@ -136,6 +139,32 @@ li {
 #right > i:hover {
 	color:#2264c5;
 }
+#search-button {
+  cursor:pointer;
+  outline:0;
+}
+.search-input {
+  -webkit-appearance:none;
+  display:inline-block !important;
+  outline:0;
+  border:0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  color:#556172;
+  width:0;
+  margin:0;
+  padding:0;
+  border-bottom:2px solid #999;
+  transition:.3s width, .3s margin, .3s padding;
+  background:#fefefe;
+}
+.search-input-animated {
+  width:15em;
+  margin:-1em 2em 0 0;
+  padding:1em;
+}
+
 
 
 
@@ -171,35 +200,40 @@ li {
 
 
 
-#search-button {
-  cursor:pointer;
-  outline:0;
+
+/*ITEM DETAILS*/
+#item-detail {
+	margin:1em;
 }
-.search-input {
-  -webkit-appearance:none;
-  display:inline-block !important;
-  outline:0;
-  border:0;
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  font-size: 14px;
-  color:#556172;
-  width:0;
-  margin:0;
-  padding:0;
-  border-bottom:2px solid #999;
-  transition:.3s width, .3s margin, .3s padding;
-  background:#fefefe;
+#item-image {
+	display:inline-block;
+	vertical-align: middle;
+	width:500px;
 }
-.search-input-animated {
-  width:15em;
-  margin:-1em 2em 0 0;
-  padding:1em;
+#item-descr {
+	display:inline-block;
+	vertical-align: top;
+	margin-left: 1em;
+	width:500px;
+}
+#item-descr > #title {
+	font-size:4em;
+	margin-bottom:0;
+}
+/* temp */
+#item-descr a {
+	color:#039be5;
+	cursor: pointer;
 }
 
 
 
+
+/* RESPONSIVENESS */
 @media (max-width: 570px) {
   #login { width:90%; margin-top:0; font-size: 14px; }
   #list > ul > li { }
+  #item-image { width:100%;}
+  #item-image > img { width:100%; }
+  #item-descr { width:100%; }
 }
